--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pyarrow==14.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 referencing==0.32.0
 requests==2.31.0
